--- a/mm/templates/about.html
+++ b/mm/templates/about.html
@@ -67,7 +67,7 @@
         <ul>
           <b>Account</b>
           <li><a href="#">Log In</a></li>
-          <li><a href="#">Sign Up</a></li>
+          <li><a href="register.html">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
@@ -81,7 +81,7 @@
           <b>Assets</b>
           <li><a href="forex.html">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
-          <li><a href="#">Commodities</a></li>
+          <li><a href="commodities.html">Commodities</a></li>
           <li><a href="#">Indices</a></li>
           <li><a href="#">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
