--- a/mm/templates/commodities.html
+++ b/mm/templates/commodities.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Registration - MultiplyMarket</title>
+  <title>Commodities - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="register">
+  <section class="temp  temp--info">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -16,7 +16,7 @@
             <img src="../img/logo-w.svg" width="180" height="auto" alt="MultiplyMarket">
           </a>
           <div class="main-nav__user  main-nav__user--temp">
-            <a class="button">Open live account</a>
+            <a class="button" href="register.html">Open live account</a>
             <a class="button  button--black" href="#">Log In</a>
             <a class="button  button--number" href="tel:+442038290032">442038290032</a>
           </div>
@@ -28,10 +28,10 @@
           <li>
             <a class="sub__title">Accounts</a>
             <ul class="sub-nav__list">
-                <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
+                <li><a>Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
                 <li><a href="segregated.html">Segregated account</a></li>
-                <li><a>Open live account</a></li>
+                <li><a href="register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
@@ -53,37 +53,26 @@
             </ul>
           </li>
       </ul>
-      <h1>Open live account</h1>
-      <div class="register__flex">
-        <div class="register__left">
-          <form class="form" method="post">
-            <p class="register__text">Fill up Your personal details:</p>
-            <div class="form__flex">
-              <input type="text" placeholder="First name">
-              <input type="text" placeholder="Last name">
-            </div>
-            <div class="form__flex">
-              <input type="number" placeholder="Country code">
-              <input type="tel" placeholder="phone">
-            </div>
-            <div class="form__flex">
-              <input type="email" placeholder="Email">
-              <input type="date" placeholder="Date of birth">
-            </div>
-            <button class="button  button--submit" type="submit">Open account</button>
-          </form>
-        </div>
-        <div class="register__right">
-          <b>Safe and Secure</b>
-          <p>Bank level security<br>No personal details are shared<br>Top SSL encryption</p>
-          <b>Real account benefits</b>
-          <p>Trade on multiple platforms using<br>an internet browser or mobile device</p>
-          <p>Deep market liquidity.<br>We connected to a clearly defined liquidity pools</p>
-          <p>No Transaction Costs</p>
-          <b>Stronger password</b>
-          <p>Make your password more secure<br>with those simple tips:</p>
-          <p>At least 8 characters<br>Contains numbers<br>Contains letters<br>Contains special characters<br>Contains upper and lower case</p>
-        </div>
+      <div class="info">
+        <h1>Commodities</h1>
+        <p>The biggest MultiplyMarket priority is to make sure that a platform supplies to its precious customers the broadest feasible selection of assets, and the commodities asset is not an exclusion. Guiding you every single step of a trading process and ensuring that you have the best of possible trading conditions during all the time are other important missions for us.</p>
+        <b>MultiplyMarket allows you:</b>
+        <ul>
+          <li>Invest in precious metal, such as gold or silver</li>
+          <li>Make contractual agreements</li>
+          <li>Make contracts on natural resources</li>
+          <li>Invest in the energy complex</li>
+        </ul>
+        <b>The platform enables you to trade with such list of assets:</b>
+        <b class="info__title">GOLD</b>
+        <p>Recently, there has been seeing such a big jump in the volume of gold and trades with it. Gold is seen a quite gainful commodity by a lot of investors. MultiplyMarket provides you with the ability to invest in gold globally, from any point on the Earth, and you don’t have to make a large physical purchase of big gold quantities. Gold has always been a chief economic influence, and it will develop in the future as well. You should bear this in a mind just because gold is strongly tangled with many currencies. Gold could have a strong and considerable impact on its value.</p>
+        <p>You have the choice to trade Gold with the US Dollar, which is what most people decide to do, but if you`d like you might as well to do the same with the Euro or another existing currency. To make a good trading income, trading gold has always had a lot of potentials.</p>
+        <b class="info__title">SILVER</b>
+        <p>Worthily said that silver has a twin economic nature. First, it is a precious metal, but it also has the industrial usability, which is one of the most notifiable factors to invest in it. When the price of gold is hesitating, a silver, as a precious metal, can be experienced a positive trend. You can see the same with currency pairs that fluctuate on the market and could make a nice impact on the silver value. Silver is highly demanded usually, specifically in the solar arenas.</p>
+        <b class="info__title">OIL</b>
+        <p>The use of crude oil usually intends on diversification of one’s profile that help to detract the risk of a loss. What works best for this is a quite unique nature of that asset, which makes it stand out from equity and currency trading. Inventory factors, OPEC reports or climate changes are not the only factors that you need to think of trading oil. But, it is the second most traded commodity after gold and it has an impressive number of turnovers every day.</p>
+        <b class="info__title">NATURAL GAS</b>
+        <p>Natural gas is quite a rare resource and we are often unsure about its overall quantity. This asset is very hard to predict due to countless political circumstances, unstable climate and many innovations regarding its excavation and discovery. It is usually recommended to make a large research and develop the strategy before investing in gas. In that case, MultiplyproMarket has every day non-stop service support for its users. A team of our dedicated professionals handles with any inquiries or issues about trading this and other commodities.</p>
       </div>
     </div>
   </section>
@@ -93,11 +82,11 @@
         <ul>
           <b>Account</b>
           <li><a href="#">Log In</a></li>
-          <li><a class="footer__active">Sign Up</a></li>
+          <li><a href="register.html">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="about.html">About Us</a></li>
+          <li><a class="footer__active">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
           <li><a href="#">Contact</a></li>
@@ -107,7 +96,7 @@
           <b>Assets</b>
           <li><a href="forex.html">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
-          <li><a href="commodities.html">Commodities</a></li>
+          <li><a class="footer__active">Commodities</a></li>
           <li><a href="#">Indices</a></li>
           <li><a href="#">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
