--- a/mm/templates/security.html
+++ b/mm/templates/security.html
@@ -107,13 +107,13 @@
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="security.html">Security</a></li>
+          <li><a class="footer__active">Security</a></li>
         </ul>
         <ul>
           <b>Assets</b>
           <li><a href="forex.html">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
-          <li><a href="#">Commodities</a></li>
+          <li><a href="commodities.html">Commodities</a></li>
           <li><a href="#">Indices</a></li>
           <li><a href="#">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
