--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -122,7 +122,7 @@
           <b>Assets</b>
           <li><a href="forex.html">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
-          <li><a href="#">Commodities</a></li>
+          <li><a href="commodities.html">Commodities</a></li>
           <li><a href="#">Indices</a></li>
           <li><a href="#">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
