--- a/mm/templates/account-funding.html
+++ b/mm/templates/account-funding.html
@@ -97,7 +97,7 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
@@ -105,8 +105,8 @@
           <li><a href="forex.html">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
           <li><a href="commodities.html">Commodities</a></li>
-          <li><a href="#">Indices</a></li>
-          <li><a href="#">Stocks</a></li>
+          <li><a href="indices.html">Indices</a></li>
+          <li><a href="stocks.html">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
         </ul>
         <ul>
