--- a/mm/templates/forex.html
+++ b/mm/templates/forex.html
@@ -103,8 +103,8 @@ The other important expression that you must take into consideration is “the m
           <li><a class="footer__active">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
           <li><a href="commodities.html">Commodities</a></li>
-          <li><a href="#">Indices</a></li>
-          <li><a href="#">Stocks</a></li>
+          <li><a href="indices.html">Indices</a></li>
+          <li><a href="stocks.html">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
         </ul>
         <ul>
