--- a/mm/templates/futures.html
+++ b/mm/templates/futures.html
@@ -94,8 +94,8 @@
           <li><a href="forex.html">Forex</a></li>
           <li><a class="footer__active">Futures</a></li>
           <li><a href="commodities.html">Commodities</a></li>
-          <li><a href="#">Indices</a></li>
-          <li><a href="#">Stocks</a></li>
+          <li><a href="indices.html">Indices</a></li>
+          <li><a href="stocks.html">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
         </ul>
         <ul>
