--- a/mm/templates/indices.html
+++ b/mm/templates/indices.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Account FAQ - MultiplyMarket</title>
+  <title>Indices - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="temp  temp--faq">
+  <section class="temp  temp--info">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -46,36 +46,16 @@
             <a class="sub__title">Tools</a>
             <ul class="sub-nav__list">
                 <li><a href="spread.html">Spreads and trading hours</a></li>
-                <li><a href="glossary">Trade glossary</a></li>
+                <li><a href="glossary.html">Trade glossary</a></li>
                 <li><a href="signals.html">Forex Signals</a></li>
-                <li><a>Account faq</a></li>
+                <li><a href="account-faq.html">Account faq</a></li>
                 <li><a href="account-funding.html">Account funding & Withdrawal</a></li>
             </ul>
           </li>
       </ul>
-      <div class="title">
-        <h1>Account FAQ</h1>
-      </div>
-      <div class="content">
-        <b>How to open a Multiply Market trade account?</b>
-        <p>It is easy and secure to open a Multiply Market account. Initially, you can choose to open a practice, free demo account. However, if you’re ready to trade, you can make a deposit and open a Live Account. Based on how you would like to fund your account, there are three types of account available, but once you begin trading, there is the option to move from one account type to another.</p>
-        <p>You will need to fill out a short registration form for any Live Account that you want to open. Legal documentation is required by regulation in order to provide proof of your identity. As soon as your identity has been confirmed, all you need to do is download the platform you want to trade on, make a deposit to fund your account, and then you’re ready to start trading.</p>
-        <b>Which types of accounts are available?</b>
-        <p>Three kinds of accounts are offered by Multiply Market:</p>
-        <p><strong>Mini Account</strong> - beginning at $500 USD.</p>
-        <p><strong>Classic Account</strong> - beginning at $5000 USD.</p>
-        <p><strong>Premium Account</strong> - beginning at $20000 USD.</p>
-        <b>Which platform should you use?</b>
-        <p>There are a variety of different platforms available from Multiply Market to meet the requirements of different traders with different circumstances.</p>
-        <p><strong>Multiply Market MetaTrader 4</strong> - Download this popular, world-renowned Forex desktop platform if you predominately trade in foreign currencies. It is both user-friendly and state-of-the-art.</p>
-        <p><strong>Multiply Market Mobile</strong> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade form anywhere in the world, from a variety of devices.</p>
-        <b>What type of information do you need to give in order to trade?</b>
-        <p>You are requested to give the following information for proof of identity upon registration:</p>
-        <p>A certified, original copy of your passport or ID.</p>
-        <p>A utility bill with proof of your mailing address.</p>
-        <p>You will need to clearly indicate the beneficiary name on the Multiply Market Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be to the same beneficiary.</p>
-        <b>How do you manage your risk?</b>
-        <p>The stop loss order and the limit order are the most common risk management tools in Forex trading. A limit order stets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
+      <div class="info">
+        <h1>Indices</h1>
+        <p>MultiplyMarket offers to invest in indices from any place in the globe in super flexible and easy way. An index is a general performance indicator for the essential cluster of stocks which can be sorted by location, exchange point or many other things. Major Stock Index section is responsible for this and it also supports traders to see how a certain stock group is forming. Among many of others, you can find the most traded indices such as the NASDAQ, S&P 500, FTSE and the Dow Jones.</p>
       </div>
     </div>
   </section>
@@ -89,10 +69,10 @@
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="about.html">About Us</a></li>
+          <li><a class="footer__active">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#">Contact</a></li>
           <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
@@ -100,7 +80,7 @@
           <li><a href="forex.html">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
           <li><a href="commodities.html">Commodities</a></li>
-          <li><a href="indices.html">Indices</a></li>
+          <li><a class="footer__active">Indices</a></li>
           <li><a href="stocks.html">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
         </ul>
