--- a/mm/sass/blocks/start.scss
+++ b/mm/sass/blocks/start.scss
@@ -1,6 +1,13 @@
 .start {
   padding: 50px 0 70px 0;
   
+  h1, h2 {
+    font-size: 40px;
+    font-family: 'SF UI Display Black', sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  
   h1 {
     margin-top: 0;
   }
@@ -8,13 +15,8 @@
   h2 {
     margin-top: 70px;
     margin-bottom: 0;
-  }
-  
-  h1, h2 {
-    font-size: 40px;
-    font-family: 'SF UI Display Black', sans-serif;
-    text-align: center;
-    text-transform: uppercase;
+    font-size: 30px;
+    // text-transform: none;
   }
   
   p {
