--- a/mm/templates/careers.html
+++ b/mm/templates/careers.html
@@ -141,7 +141,7 @@
           <li><a href="about.html">About Us</a></li>
           <li><a class="footer__active">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
@@ -149,8 +149,8 @@
           <li><a href="forex.html">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
           <li><a href="commodities.html">Commodities</a></li>
-          <li><a href="#">Indices</a></li>
-          <li><a href="#">Stocks</a></li>
+          <li><a href="indices.html">Indices</a></li>
+          <li><a href="stocks.html">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
         </ul>
         <ul>
