--- a/mm/templates/commodities.html
+++ b/mm/templates/commodities.html
@@ -89,7 +89,7 @@
           <li><a class="footer__active">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
@@ -97,8 +97,8 @@
           <li><a href="forex.html">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
           <li><a class="footer__active">Commodities</a></li>
-          <li><a href="#">Indices</a></li>
-          <li><a href="#">Stocks</a></li>
+          <li><a href="indices.html">Indices</a></li>
+          <li><a href="stocks.html">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
         </ul>
         <ul>
