--- a/mm/templates/stocks.html
+++ b/mm/templates/stocks.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Account FAQ - MultiplyMarket</title>
+  <title>Stocks CFD - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="temp  temp--faq">
+  <section class="temp  temp--info">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -46,36 +46,18 @@
             <a class="sub__title">Tools</a>
             <ul class="sub-nav__list">
                 <li><a href="spread.html">Spreads and trading hours</a></li>
-                <li><a href="glossary">Trade glossary</a></li>
+                <li><a href="glossary.html">Trade glossary</a></li>
                 <li><a href="signals.html">Forex Signals</a></li>
-                <li><a>Account faq</a></li>
+                <li><a href="account-faq.html">Account faq</a></li>
                 <li><a href="account-funding.html">Account funding & Withdrawal</a></li>
             </ul>
           </li>
       </ul>
-      <div class="title">
-        <h1>Account FAQ</h1>
-      </div>
-      <div class="content">
-        <b>How to open a Multiply Market trade account?</b>
-        <p>It is easy and secure to open a Multiply Market account. Initially, you can choose to open a practice, free demo account. However, if you’re ready to trade, you can make a deposit and open a Live Account. Based on how you would like to fund your account, there are three types of account available, but once you begin trading, there is the option to move from one account type to another.</p>
-        <p>You will need to fill out a short registration form for any Live Account that you want to open. Legal documentation is required by regulation in order to provide proof of your identity. As soon as your identity has been confirmed, all you need to do is download the platform you want to trade on, make a deposit to fund your account, and then you’re ready to start trading.</p>
-        <b>Which types of accounts are available?</b>
-        <p>Three kinds of accounts are offered by Multiply Market:</p>
-        <p><strong>Mini Account</strong> - beginning at $500 USD.</p>
-        <p><strong>Classic Account</strong> - beginning at $5000 USD.</p>
-        <p><strong>Premium Account</strong> - beginning at $20000 USD.</p>
-        <b>Which platform should you use?</b>
-        <p>There are a variety of different platforms available from Multiply Market to meet the requirements of different traders with different circumstances.</p>
-        <p><strong>Multiply Market MetaTrader 4</strong> - Download this popular, world-renowned Forex desktop platform if you predominately trade in foreign currencies. It is both user-friendly and state-of-the-art.</p>
-        <p><strong>Multiply Market Mobile</strong> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade form anywhere in the world, from a variety of devices.</p>
-        <b>What type of information do you need to give in order to trade?</b>
-        <p>You are requested to give the following information for proof of identity upon registration:</p>
-        <p>A certified, original copy of your passport or ID.</p>
-        <p>A utility bill with proof of your mailing address.</p>
-        <p>You will need to clearly indicate the beneficiary name on the Multiply Market Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be to the same beneficiary.</p>
-        <b>How do you manage your risk?</b>
-        <p>The stop loss order and the limit order are the most common risk management tools in Forex trading. A limit order stets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
+      <div class="info">
+        <h1>Stocks CFD</h1>
+        <p>Stocks CFD trading helps you to enter the many major stock markets from different countries avoiding large investments and gains bigger advantages that trading just with assets by themselves. MultiplyMarket arranges also many other benefits for traders, delivering them the premium terms for trade with no charges for almost all trading services. Low spread and the leverage will help you even maximize the profit.</p>
+        <p>The absence of short sales bounds, stock lending, and borrowing or other confines picture Stock CFD market very attractive for trading. You will be excited with you trading process that should rely on indecisive stock prices, fluctuating macro- and microeconomics factors and many others technological, political and natural processes.</p>
+        <p>Companies can increase their money income by launch selling their shares/stocks for growth, new products, development and so on to the public. Investors can take a revenue of the huge companies and gain a stock profit. Such giant companies, as Google, Apple, Intel and so on are selling their shares online. The forehand goal of MultiplyMarket is to make sure that all customers have the best support for successful trading results. Following that goal, we have developed for you this platform which is supplemented with all possible trading features, tools and provide you with all broadcasts and updated events by a team of our dedicated professionals.</p>
       </div>
     </div>
   </section>
@@ -89,10 +71,10 @@
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="about.html">About Us</a></li>
+          <li><a class="footer__active">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#">Contact</a></li>
           <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
