--- a/mm/templates/about.html
+++ b/mm/templates/about.html
@@ -84,12 +84,12 @@
           <li><a href="commodities.html">Commodities</a></li>
           <li><a href="indices.html">Indices</a></li>
           <li><a href="stocks.html">Stocks</a></li>
-          <li><a href="#">Algo trading</a></li>
+          <li><a href="algo.html">Algo trading</a></li>
         </ul>
         <ul>
           <b>Resources</b>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Terms and Conditions</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="terms.html">Terms and Conditions</a></li>
           <li><a href="#">Risk Disclosure</a></li>
           <li><a href="#">Privacy Policy</a></li>
           <li><a href="#">Anti-Money Laundering</a></li>
