--- a/mm/templates/stocks.html
+++ b/mm/templates/stocks.html
@@ -71,10 +71,10 @@
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a class="footer__active">About Us</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
@@ -83,13 +83,13 @@
           <li><a href="futures.html">Futures</a></li>
           <li><a href="commodities.html">Commodities</a></li>
           <li><a href="indices.html">Indices</a></li>
-          <li><a href="stocks.html">Stocks</a></li>
-          <li><a href="#">Algo trading</a></li>
+          <li><a class="footer__active">Stocks</a></li>
+          <li><a href="algo.html">Algo trading</a></li>
         </ul>
         <ul>
           <b>Resources</b>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Terms and Conditions</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="terms.html">Terms and Conditions</a></li>
           <li><a href="#">Risk Disclosure</a></li>
           <li><a href="#">Privacy Policy</a></li>
           <li><a href="#">Anti-Money Laundering</a></li>
