--- a/mm/templates/web.html
+++ b/mm/templates/web.html
@@ -73,7 +73,7 @@
             <a class="button  button--title" href="#">Go to web trader</a>
           </div>
           <div class="trader__right">
-            <img src="../img/mobile.png" alt=""><br>
+            <img src="../img/web.png" alt=""><br>
           </div>
         </div>
         <div class="trader__sub-content">
@@ -116,12 +116,12 @@
           <li><a href="commodities.html">Commodities</a></li>
           <li><a href="indices.html">Indices</a></li>
           <li><a href="stocks.html">Stocks</a></li>
-          <li><a href="#">Algo trading</a></li>
+          <li><a href="algo.html">Algo trading</a></li>
         </ul>
         <ul>
           <b>Resources</b>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Terms and Conditions</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="terms.html">Terms and Conditions</a></li>
           <li><a href="#">Risk Disclosure</a></li>
           <li><a href="#">Privacy Policy</a></li>
           <li><a href="#">Anti-Money Laundering</a></li>
