--- a/mm/templates/algo.html
+++ b/mm/templates/algo.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Commodities - MultiplyMarket</title>
+  <title>Algo Trading - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -54,25 +54,37 @@
           </li>
       </ul>
       <div class="info">
-        <h1>Commodities</h1>
-        <p>The biggest MultiplyMarket priority is to make sure that a platform supplies to its precious customers the broadest feasible selection of assets, and the commodities asset is not an exclusion. Guiding you every single step of a trading process and ensuring that you have the best of possible trading conditions during all the time are other important missions for us.</p>
-        <b>MultiplyMarket allows you:</b>
+        <h1>Algo Trading</h1>
+        <p>Algo Trading becomes very popular nowadays due to its active development. It is a program for investors to become more successful, have favorable outcomes and constantly evolve. Algo Trading is based on the artificial intelligence and scenario-based approach that help investors have profitable trading. The time period, quantity and price are, of course, taken into account while creating trading strategies.</p>
+        <b>The assistance of the software will be:</b>
         <ul>
-          <li>Invest in precious metal, such as gold or silver</li>
-          <li>Make contractual agreements</li>
-          <li>Make contracts on natural resources</li>
-          <li>Invest in the energy complex</li>
+          <li>Help detect the quality of affording gain, which will be best for investors</li>
+          <li>Reduced expenses</li>
+          <li>Lucidity becomes more perceptible</li>
+          <li>Amend balance of commitment and planning of trading actions</li>
+          <li>Develop investor’s skills to analyze and take action according to the trading situation</li>
         </ul>
-        <b>The platform enables you to trade with such list of assets:</b>
-        <b class="info__title">GOLD</b>
-        <p>Recently, there has been seeing such a big jump in the volume of gold and trades with it. Gold is seen a quite gainful commodity by a lot of investors. MultiplyMarket provides you with the ability to invest in gold globally, from any point on the Earth, and you don’t have to make a large physical purchase of big gold quantities. Gold has always been a chief economic influence, and it will develop in the future as well. You should bear this in a mind just because gold is strongly tangled with many currencies. Gold could have a strong and considerable impact on its value.</p>
-        <p>You have the choice to trade Gold with the US Dollar, which is what most people decide to do, but if you`d like you might as well to do the same with the Euro or another existing currency. To make a good trading income, trading gold has always had a lot of potentials.</p>
-        <b class="info__title">SILVER</b>
-        <p>Worthily said that silver has a twin economic nature. First, it is a precious metal, but it also has the industrial usability, which is one of the most notifiable factors to invest in it. When the price of gold is hesitating, a silver, as a precious metal, can be experienced a positive trend. You can see the same with currency pairs that fluctuate on the market and could make a nice impact on the silver value. Silver is highly demanded usually, specifically in the solar arenas.</p>
-        <b class="info__title">OIL</b>
-        <p>The use of crude oil usually intends on diversification of one’s profile that help to detract the risk of a loss. What works best for this is a quite unique nature of that asset, which makes it stand out from equity and currency trading. Inventory factors, OPEC reports or climate changes are not the only factors that you need to think of trading oil. But, it is the second most traded commodity after gold and it has an impressive number of turnovers every day.</p>
-        <b class="info__title">NATURAL GAS</b>
-        <p>Natural gas is quite a rare resource and we are often unsure about its overall quantity. This asset is very hard to predict due to countless political circumstances, unstable climate and many innovations regarding its excavation and discovery. It is usually recommended to make a large research and develop the strategy before investing in gas. In that case, MultiplyproMarket has every day non-stop service support for its users. A team of our dedicated professionals handles with any inquiries or issues about trading this and other commodities.</p>
+        <b>Advantages</b>
+        <ul>
+          <li>Fast multiple investing – the quantity of trading operations the Algo Trading is able to perform is way higher and differs from any regular trader. The software may proceed with repeated tasks through a certain time period and this may take place in various markets. Of course, all taken actions are intended to improve investor’s trading progress</li>
+          <li>24/7 – you won’t have to plan your trading and follow any platform’s working curfews, the software offers its services non-stop to draw more traders and help them get more profit any time, suitable for them</li>
+          <li>Mechanized work – as we are using artificial intelligence and specific algorithms, all our investors should not worry about human factor (stress, personal problems, unfocused work etc) that may cause any losses</li>
+          <li>Seeing all cards – investors can take their time and build a strategy, see through all pros and cons of the trading and future actions because there will be no need to control the system that will be automatically doing its job and handling all “unnecessary” things</li>
+        </ul>
+        <b>Various robot-functions</b>
+        <ul>
+          <li>Auto-search – the system will constantly update the market and search for the best trading opportunities and options according to the inquiry and will send notifications right away</li>
+          <li>Make trades – the robot will assist the investor to create a number of trades right away. All actions will be done in accordance with the specific instructions, set by the trader, and will also correspond to the specific risk margins</li>
+          <li>The strategy of the investment – the robot works according to the set algorithm, which helps to find best deals, best opportunities on the market. It also is done in accordance with the special user’s preferences</li>
+        </ul>
+        <b>Risks</b>
+        <p>Depending on the chosen risk profile, all robots have the same mechanism: they have various setting options to choose. The trading principle here is as usual: the more you set on the table (and accordingly the risks get higher), the more you may get as a reward.</p>
+        <b>Tree variants for trading:</b>
+        <ul>
+          <li>Classics of the market – you should choose this risk profile if you are trading in small amounts. You will get support and feedback within this profile if funds amount does not outbid 10 000 USD, and annual percentage rate is 3, which will surely help the trader with any shortages</li>
+          <li>Know-how investor – this one should be chosen if you have already traded for some time and you have quite a bit knowledge of the trading principals. Annual percentage rate – 7, maximum money amount – 50 000 USD</li>
+          <li>Professional businessman – on this profile terms you will have the percentage rate of 25 (can you actually imagine) and the sum of the account should exceed 50 000 USD</li>
+        </ul>
       </div>
     </div>
   </section>
@@ -86,7 +98,7 @@
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a class="footer__active">About Us</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -96,10 +108,10 @@
           <b>Assets</b>
           <li><a href="forex.html">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
-          <li><a class="footer__active">Commodities</a></li>
+          <li><a href="commodities.html">Commodities</a></li>
           <li><a href="indices.html">Indices</a></li>
           <li><a href="stocks.html">Stocks</a></li>
-          <li><a href="algo.html">Algo trading</a></li>
+          <li><a class="footer__active">Algo trading</a></li>
         </ul>
         <ul>
           <b>Resources</b>
