--- a/mm/templates/faq.html
+++ b/mm/templates/faq.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Commodities - MultiplyMarket</title>
+  <title>FAQ - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -54,25 +54,27 @@
           </li>
       </ul>
       <div class="info">
-        <h1>Commodities</h1>
-        <p>The biggest MultiplyMarket priority is to make sure that a platform supplies to its precious customers the broadest feasible selection of assets, and the commodities asset is not an exclusion. Guiding you every single step of a trading process and ensuring that you have the best of possible trading conditions during all the time are other important missions for us.</p>
-        <b>MultiplyMarket allows you:</b>
-        <ul>
-          <li>Invest in precious metal, such as gold or silver</li>
-          <li>Make contractual agreements</li>
-          <li>Make contracts on natural resources</li>
-          <li>Invest in the energy complex</li>
-        </ul>
-        <b>The platform enables you to trade with such list of assets:</b>
-        <b class="info__title">GOLD</b>
-        <p>Recently, there has been seeing such a big jump in the volume of gold and trades with it. Gold is seen a quite gainful commodity by a lot of investors. MultiplyMarket provides you with the ability to invest in gold globally, from any point on the Earth, and you don’t have to make a large physical purchase of big gold quantities. Gold has always been a chief economic influence, and it will develop in the future as well. You should bear this in a mind just because gold is strongly tangled with many currencies. Gold could have a strong and considerable impact on its value.</p>
-        <p>You have the choice to trade Gold with the US Dollar, which is what most people decide to do, but if you`d like you might as well to do the same with the Euro or another existing currency. To make a good trading income, trading gold has always had a lot of potentials.</p>
-        <b class="info__title">SILVER</b>
-        <p>Worthily said that silver has a twin economic nature. First, it is a precious metal, but it also has the industrial usability, which is one of the most notifiable factors to invest in it. When the price of gold is hesitating, a silver, as a precious metal, can be experienced a positive trend. You can see the same with currency pairs that fluctuate on the market and could make a nice impact on the silver value. Silver is highly demanded usually, specifically in the solar arenas.</p>
-        <b class="info__title">OIL</b>
-        <p>The use of crude oil usually intends on diversification of one’s profile that help to detract the risk of a loss. What works best for this is a quite unique nature of that asset, which makes it stand out from equity and currency trading. Inventory factors, OPEC reports or climate changes are not the only factors that you need to think of trading oil. But, it is the second most traded commodity after gold and it has an impressive number of turnovers every day.</p>
-        <b class="info__title">NATURAL GAS</b>
-        <p>Natural gas is quite a rare resource and we are often unsure about its overall quantity. This asset is very hard to predict due to countless political circumstances, unstable climate and many innovations regarding its excavation and discovery. It is usually recommended to make a large research and develop the strategy before investing in gas. In that case, MultiplyproMarket has every day non-stop service support for its users. A team of our dedicated professionals handles with any inquiries or issues about trading this and other commodities.</p>
+        <h1>FAQ</h1>
+        <b>What is the minimum amount required to open an account?</b>
+        <p>There is no minimum to open a new account; however, a $2,000 deposit is required to be considered for margin and options privileges, regardless of any promotional offer.</p>
+        <b>What is the fastest way to open a new account?</b>
+        <p>Opening an account online is the fastest way to open and fund an account. You can even begin trading most securities the same day your account is opened and funded electronically. We work 24 hours a day, 7 days a week.</p>
+        <b>What types of investments can I make with a MultiplyMarket account?</b>
+        <p>MultiplyMarket offers a comprehensive and diverse selection of investment products. You can trade stocks, options, mutual funds, ETFs, futures, forex, and bonds and CDs in a standard account. Please note that investment choices may vary in less common account types such as Trust accounts, 529 education accounts, and pension plans. Each plan will specify what types of investments are allowed. See Account Types and Investment Products for more information.</p>
+        <p>Yes. As you’re completing the Account Application, simply complete the margin and/or options section. We’ll review the information, and if appropriate, extend margin and/or options privileges to your account.</p>
+        <p>Margin and options trading pose additional investment risks and are not suitable for all investors. In addition, certain account types may not be eligible for margin, options, or advanced options trading privileges. Please read Characteristics and Risks of Standardized Options, Margin Disclosure Document, Margin Account Handbook, and Day Trading Margin Requirements.</p>
+        <b>Can I write checks from my account?</b>
+        <p>MultiplyMarket  has a comprehensive Cash Management offering. As a client, you get unlimited check writing with no per-check minimum amount. Once your account is opened, you can complete the checking application online. A Cash Management account also gives you access to free online bill pay, as well as a free debit card with nationwide rebates on all ATM fees.</p>
+        <b>Do I earn interest in my account?</b>
+        <p>Yes. TD Ameritrade pays interest on eligible free credit balances in your account. Simple interest is calculated on the entire daily balance and is credited to your account monthly. This service is subject to the current TD Ameritrade rates and policies, which may change without notice.</p>
+        <b>Are there restrictions on funds deposited into my account?</b>
+        <p>Funds typically post to your account 1-2 days after we receive your check or electronic deposit. Once the fund`s post, you can trade most securities. Electronic deposits can take another 3-4 business days to clear; checks can take 5-6 business days.</p>
+        <p>Until your deposit clears, we restrict withdrawals and trading off some securities based on market risk. This includes—but isn’t limited to—options and most stocks priced under $5 per share.</p>
+        <p>All electronic deposits are subject to review and may be restricted for 60 days. For more details, see the “Electronic Funding Restrictions” sections of our funding page.</p>
+        <b>Are there any fees?</b>
+        <p>We believe in fair, straightforward pricing and for you, that means flat-rate $6.95 commissions on every Internet equity trade, regardless of account balance or how many shares you buy; however, you won’t be charged any platform, inactivity, or market data fees. Please review our Commission and Fees for complete details.</p>
+        <b>Is my account protected?</b>
+        <p>If you lose cash or securities from your account due to unauthorized activity, we’ll reimburse you for the cash or shares of securities you lost. We offer you this protection, which adds to the provisions that already govern your account, in case unauthorized activity ever occurs and it was through no fault of your own.</p>
       </div>
     </div>
   </section>
@@ -96,14 +98,14 @@
           <b>Assets</b>
           <li><a href="forex.html">Forex</a></li>
           <li><a href="futures.html">Futures</a></li>
-          <li><a class="footer__active">Commodities</a></li>
+          <li><a href="commodities.html">Commodities</a></li>
           <li><a href="indices.html">Indices</a></li>
           <li><a href="stocks.html">Stocks</a></li>
           <li><a href="algo.html">Algo trading</a></li>
         </ul>
         <ul>
           <b>Resources</b>
-          <li><a href="faq.html">FAQ</a></li>
+          <li><a class="footer__active">FAQ</a></li>
           <li><a href="terms.html">Terms and Conditions</a></li>
           <li><a href="#">Risk Disclosure</a></li>
           <li><a href="#">Privacy Policy</a></li>
