a looooooot of text

--- a/mm/templates/anti-money.html
+++ b/mm/templates/anti-money.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Futures - MultiplyMarket</title>
+  <title>Anti-Money Laundering - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -54,22 +54,20 @@
           </li>
       </ul>
       <div class="info">
-        <h1>Futures</h1>
-        <p>MuptiplyMarket traders have a chance to trade using a broad selection of Future’s assets on markets all around the world. The portfolio engages with metals, bonds, currency pairs and much more of that. With MultiplyMarket you will have the competitive advantage right in your hands!</p>
-        <p>You are just a couple of steps away from making a trade and opening a position, simply you need to register.</p>
-        <b>There are few additional features that make trading with MultiplyMarket brilliant:</b>
+        <h1>Anti-Money Laundering</h1>
+        <p>MultiplyMarket puts a strong emphasis on counter-money laundering and takes it very seriously. The platform strongly abides by the AML terms, and as a prominent and global forex platform, it stands as firm opposition against money laundering. The following protocol has been made for the purpose of keeping any money laundering activities from happening and providing timely information on the matter. MultiplyMarket encourages its users to read the protocol against money laundering and let us know in case there are any unclear points.</p>
+        <b>The meaning of money laundering?</b>
+        <p>The concealment of any illegal money by moving them to a legally valid place or financial institution, unnoticed and hidden from the eye of the law.</p>
+        <p>It is possible that funds moved to lawful financial institutions by members of terrorist organizations can be used to buy goods or services to be utilized in unlawful actions or to aid other similar activities.</p>
+        <p>MultiplyMarket abides by all legal restrictions and is going to notify about all effort of any company, entity or person to hide the possession or source of any funds obtained by unlawful actions. The following are also contained: fraudulent actions, unlawful gambling, stealing, anything drug related and others.</p>
+        <b>For what reasons do we need to verify your identity when trading?</b>
+        <p>Every MultiplyMarket client is obliged to provide verification of his identity along with a proven source of income. The client has to give some form of ID in order to verify his name, place of residence and other relevant info.</p>
+        <b>Which documents are necessary for verifying the identity?</b>
         <ul>
-          <li>Access to a useful trading data, opportunities, latest economic events, and reports</li>
-          <li>More than 450 available trading assets</li>
-          <li>Broad selection of bonds, currencies, stocks and precious metals</li>
-          <li>International availability</li>
-          <li>Easy market entry</li>
-          <li>Speeded up trading process define</li>
+          <li>Legal ID document.</li>
+          <li>Duplicate of a utility payment. It must have the client`s name and address.</li>
+          <li>The user has to distinctly show the name of the recipient when filling in the MultiplyMarket contract. The name on the contract should be the same as the one of the account recipient and the one on the identification papers. Also, any withdrawals should go to the same recipient.</li>
         </ul>
-        <b class="info__title">Futures definition</b>
-        <p>Futures is a broadly used trading instrument, which could be also defined thought-out as a forward contract. A future must consist in a two-sided agreement to proceed to a purchase or to sell an asset, which had previously been agreed under a price and a date. It provides you with the ability to be speculative about it or to join in hedging activities touching the asset’s value.</p>
-        <p>The purchasing party is addressed also as “long” (the one obligated to buy the declared instrument at some moment in time), while the selling party (the one that consented to sell the instrument) is notified as “short”. Those terms are raised from two parties’ hopes to make a contract. Eventually, the selling side is better off if the price of the instrument falls and the buying side is better off if the instrument price growths. Keep in mind that it is the arrangement to purchase at a definite adjusted price.</p>
-        <p>When speaking about the investment in futures, the instrument might be many of things, ranging from crude oil and precious metal to commodities, company stock and much more.</p>
       </div>
     </div>
   </section>
@@ -79,20 +77,20 @@
         <ul>
           <b>Account</b>
           <li><a href="#">Log In</a></li>
-          <li><a href="#">Sign Up</a></li>
+          <li><a href="register.html">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
           <li><a href="about.html">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
           <b>Assets</b>
           <li><a href="forex.html">Forex</a></li>
-          <li><a class="footer__active">Futures</a></li>
+          <li><a href="futures.html">Futures</a></li>
           <li><a href="commodities.html">Commodities</a></li>
           <li><a href="indices.html">Indices</a></li>
           <li><a href="stocks.html">Stocks</a></li>
@@ -104,7 +102,7 @@
           <li><a href="terms.html">Terms and Conditions</a></li>
           <li><a href="risk.html">Risk Disclosure</a></li>
           <li><a href="privacy.html">Privacy Policy</a></li>
-          <li><a href="anti-money.html">Anti-Money Laundering</a></li>
+          <li><a class="footer__active">Anti-Money Laundering</a></li>
           <li><a href="#">KYC Policy</a></li>
         </ul>
       </div>
