--- a/mm/templates/platform.html
+++ b/mm/templates/platform.html
@@ -129,9 +129,9 @@
           <b>Resources</b>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="terms.html">Terms and Conditions</a></li>
-          <li><a href="#">Risk Disclosure</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Anti-Money Laundering</a></li>
+          <li><a href="risk.html">Risk Disclosure</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="anti-money.html">Anti-Money Laundering</a></li>
           <li><a href="#">KYC Policy</a></li>
         </ul>
       </div>
