--- a/mm/templates/risk.html
+++ b/mm/templates/risk.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Futures - MultiplyMarket</title>
+  <title>Risk Disclosure - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -54,22 +54,19 @@
           </li>
       </ul>
       <div class="info">
-        <h1>Futures</h1>
-        <p>MuptiplyMarket traders have a chance to trade using a broad selection of Future’s assets on markets all around the world. The portfolio engages with metals, bonds, currency pairs and much more of that. With MultiplyMarket you will have the competitive advantage right in your hands!</p>
-        <p>You are just a couple of steps away from making a trade and opening a position, simply you need to register.</p>
-        <b>There are few additional features that make trading with MultiplyMarket brilliant:</b>
+        <h1>Risk Disclosure</h1>
+        <p>Don`t forget that trading company shares, investing in currency and any other financial instrument has its definite risks and can result in losses for the user. The following announcement lists some of the hazards related to investing in financial assets. We would like you to go through the disclaimer and let us know in case you have any questions or uncertainties about it.</p>
+        <p>Because of the theoretical essence of Forex trading, it is possible that the user ends up losing all, or at least some of his money. In some cases, the amount of lost funds can be bigger than the first deposit. MultiplyMarket highly recommends that the client uses a so-called risk capital for his investment purposes. Risk capital refers to money which is not important for covering the basic life needs of the client. In other words, it is money which you can afford to lose. It is also wise to make an assessment of what you want to achieve by trading Forex and how far you`re willing to go. Be aware of your own financial capabilities and try to find the approach to trading that works best for you.</p>
+        <p>In case you cannot fully comprehend the uncertainty behind Forex trading or any of the MultiplyMarket terms and conditions, we advise you to abstain from trading on MultiplyMarket. Along with all of the abovementioned factors, here are some additional risk-related factors you should have in mind:</p>
         <ul>
-          <li>Access to a useful trading data, opportunities, latest economic events, and reports</li>
-          <li>More than 450 available trading assets</li>
-          <li>Broad selection of bonds, currencies, stocks and precious metals</li>
-          <li>International availability</li>
-          <li>Easy market entry</li>
-          <li>Speeded up trading process define</li>
+          <li>MultiplyMarket might have an advantage with amounts that go over the amount of the user`s margin deposit and this might lead to losses bigger than the amount of the deposit.</li>
+          <li>Volatile market conditions and fluctuations, as well as building up of certain taxes and fees can lead to a funds deficit.</li>
+          <li>In some cases, it is not possible to start certain trades at the designated price or a conditional stop/limit or stop/loss procedure, due to unpredictable market circumstances. In those cases, the client might be asked to make a quick deposit. Should the client fail to make the deposit, he will be responsible for any negative funds on his account along with the cancellation of the trade.</li>
+          <li>The trading of currencies does not happen on an actual exchange market. There are sequences which are not traded very often. In some cases, there might be errors in the citation of prices because there is no other party. Such a trade might not be possible at the particular moment in time.</li>
+          <li>MultiplyMarket does not provide any guidance or aiding information and might have interests different than those of the client. In some cases, MultiplyMarket might serve as an opposing party of a trade or act in a disadvantageous for the user manner. In other words, in a trade where the client is selling an asset, MultiplyMarket might be the buyer. The opposite situation is also possible. It is also possible that MultiplyMarket sets the pricing for those trades, which might not reflect the best possible prices for the client and might differ from the prices offered to other clients.</li>
+          <li>The sudden closing of the client`s trades might occur in case of bankruptcy in MultiplyMarket, an associate bank or any other party related to the trading process.</li>
         </ul>
-        <b class="info__title">Futures definition</b>
-        <p>Futures is a broadly used trading instrument, which could be also defined thought-out as a forward contract. A future must consist in a two-sided agreement to proceed to a purchase or to sell an asset, which had previously been agreed under a price and a date. It provides you with the ability to be speculative about it or to join in hedging activities touching the asset’s value.</p>
-        <p>The purchasing party is addressed also as “long” (the one obligated to buy the declared instrument at some moment in time), while the selling party (the one that consented to sell the instrument) is notified as “short”. Those terms are raised from two parties’ hopes to make a contract. Eventually, the selling side is better off if the price of the instrument falls and the buying side is better off if the instrument price growths. Keep in mind that it is the arrangement to purchase at a definite adjusted price.</p>
-        <p>When speaking about the investment in futures, the instrument might be many of things, ranging from crude oil and precious metal to commodities, company stock and much more.</p>
+        <p>By using MultiplyMarket and its services, the client agrees that he`s read and comprehended the risk announcement.</p>
       </div>
     </div>
   </section>
@@ -79,20 +76,20 @@
         <ul>
           <b>Account</b>
           <li><a href="#">Log In</a></li>
-          <li><a href="#">Sign Up</a></li>
+          <li><a href="register.html">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
           <li><a href="about.html">About Us</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="security.html">Security</a></li>
         </ul>
         <ul>
           <b>Assets</b>
           <li><a href="forex.html">Forex</a></li>
-          <li><a class="footer__active">Futures</a></li>
+          <li><a href="futures.html">Futures</a></li>
           <li><a href="commodities.html">Commodities</a></li>
           <li><a href="indices.html">Indices</a></li>
           <li><a href="stocks.html">Stocks</a></li>
@@ -102,7 +99,7 @@
           <b>Resources</b>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="terms.html">Terms and Conditions</a></li>
-          <li><a href="risk.html">Risk Disclosure</a></li>
+          <li><a class="footer__active">Risk Disclosure</a></li>
           <li><a href="privacy.html">Privacy Policy</a></li>
           <li><a href="anti-money.html">Anti-Money Laundering</a></li>
           <li><a href="#">KYC Policy</a></li>
