--- a/mm/templates/kyc.html
+++ b/mm/templates/kyc.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Stocks CFD - MultiplyMarket</title>
+  <title>KYC - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -54,10 +54,29 @@
           </li>
       </ul>
       <div class="info">
-        <h1>Stocks CFD</h1>
-        <p>Stocks CFD trading helps you to enter the many major stock markets from different countries avoiding large investments and gains bigger advantages that trading just with assets by themselves. MultiplyMarket arranges also many other benefits for traders, delivering them the premium terms for trade with no charges for almost all trading services. Low spread and the leverage will help you even maximize the profit.</p>
-        <p>The absence of short sales bounds, stock lending, and borrowing or other confines picture Stock CFD market very attractive for trading. You will be excited with you trading process that should rely on indecisive stock prices, fluctuating macro- and microeconomics factors and many others technological, political and natural processes.</p>
-        <p>Companies can increase their money income by launch selling their shares/stocks for growth, new products, development and so on to the public. Investors can take a revenue of the huge companies and gain a stock profit. Such giant companies, as Google, Apple, Intel and so on are selling their shares online. The forehand goal of MultiplyMarket is to make sure that all customers have the best support for successful trading results. Following that goal, we have developed for you this platform which is supplemented with all possible trading features, tools and provide you with all broadcasts and updated events by a team of our dedicated professionals.</p>
+        <h1>KYC</h1>
+        <p>Know your customer policies have become increasingly important worldwide lately, especially among banks and other financial institutions, in order to prevent identity theft, money laundering, financial fraud and terrorist activity.</p>
+        <p>MultiplyMarket holds a zero tolerance fraud policy and is taking all measures possible to prevent it. Any fraudulent activity will be documented and all related accounts to it will be immediately closed. All funds in these accounts will be forfeited.</p>
+        <b>Prevention:</b>
+        <p>MultiplyMarket aims to ensure the integrity of any sensitive data it obtains, such as your account information and the transactions you make, using a variety of security measures and fraud controls. Securing your electronic transactions requires us to be provided with certain data from you, including your preferred deposit method.</p>
+        <b>When you deposit funds we will require the following documents:</b>
+        <ul>
+          <li>A copy of your valid passport with the signature page</li>
+          <li>Copies of your credit cards used to make the deposit (The front side with only the 4 last digits visible, backside with the CVV covered)</li>
+          <li>A copy of a recent utility bill in your name and address</li>
+          <li>A signed purchase history of your online transactions</li>
+        </ul>
+        <b>If you have any questions please don’t hesitate to contact our customer support:</b>
+        <p>MultiplyMarket support@MultiplyMarket.com</p>
+        <b>When do I need to provide these documents?</b>
+        <p>We highly appreciate you taking the time to provide us with all the necessary documents as soon as you can, in order to avoid any delays in processing your transactions. We require the receipt of all the necessary documents prior to making any cash transactions to your benefit.</p>
+        <p>Some circumstances may require us to request these documents before allowing any other activities in your account, such as deposits or trades.</p>
+        <p>Please note that if we will not receive the required documents on file, your pending withdrawals will be canceled and credited back to your trading account. We will notify you in such event via our system.</p>
+        <b>How can I send you these documents?</b>
+        <p>Please scan your documents, or take a high-quality digital camera picture, save the images as jpegs, then send it to us via mail to support@MultiplyMarket.com</p>
+        <p>How do I know my documents are safe with you?</p>
+        <p>MultiplyMarket holds the security of documentation with the highest priority and treats all documents it receives with utmost respect and confidentiality. All files we obtain are fully protected using the highest level possible of encryption at every step of the review process.</p>
+        <p>We thank you for your cooperation in helping us make MultiplyMarket a safer place to trade.</p>
       </div>
     </div>
   </section>
@@ -83,7 +102,7 @@
           <li><a href="futures.html">Futures</a></li>
           <li><a href="commodities.html">Commodities</a></li>
           <li><a href="indices.html">Indices</a></li>
-          <li><a class="footer__active">Stocks</a></li>
+          <li><a href="stocks.html">Stocks</a></li>
           <li><a href="algo.html">Algo trading</a></li>
         </ul>
         <ul>
@@ -93,7 +112,7 @@
           <li><a href="risk.html">Risk Disclosure</a></li>
           <li><a href="privacy.html">Privacy Policy</a></li>
           <li><a href="anti-money.html">Anti-Money Laundering</a></li>
-          <li><a href="kyc.html">KYC Policy</a></li>
+          <li><a class="footer__active">KYC Policy</a></li>
         </ul>
       </div>
       <h1>Risk Warning:</h1>
