--- a/mm/sass/style.scss
+++ b/mm/sass/style.scss
@@ -14,6 +14,7 @@
 @import 'blocks/live';
 @import 'blocks/map';
 @import 'blocks/start';
+@import 'blocks/payment';
 @import 'blocks/footer';
 
 @import 'blocks/title';
